# DID-manager-sample

./: .baconrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  rust-toolchain.toml
agent/: Cargo.toml
agent/src/: cli.rs  config.rs  lib.rs  main.rs  network.rs  server.rs
agent/src/controllers/: errors.rs  mod.rs
agent/src/controllers/public/: miax_create_identifier.rs  miax_find_identifier.rs  miax_receive.rs  mod.rs  utils.rs
agent/src/miax/: mod.rs
agent/src/miax/extension/: secure_keystore.rs
agent/src/miax/keyring/: keypair.rs
agent/src/miax/utils/: did_accessor.rs  mod.rs  sidetree_client.rs  studio_client.rs
agent/src/services/: miax.rs  mod.rs  studio.rs
controller/: Cargo.toml
controller/src/: lib.rs  unix_utils.rs
controller/src/managers/: mmap_storage.rs  mod.rs  resource.rs  runtime.rs  unix_process_manager.rs
controller/src/state/: idle.rs  mod.rs
controller/src/state/rollback/: mod.rs
controller/src/state/update/: mod.rs
controller/src/state/update/tasks/: move_resource.rs  update_json.rs
controller/src/validator/: process.rs
db/init/: 00-database.sql  01-tables.sql
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/did/: did_repository.rs  lib.rs  mod.rs
protocol/src/did/sidetree/: client.rs  mod.rs  multihash.rs  payload.rs
protocol/src/didcomm/: encrypted.rs  mod.rs  types.rs
protocol/src/keyring/: jwk.rs  keypair.rs  mod.rs
protocol/src/verifiable_credentials/: credential_signer.rs  did_vc.rs  jws.rs  mod.rs  types.rs
