[workspace]
resolver = "2"
members = ["agent", "protocol", "controller", "bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["riii111 <>"]
description = "IoT device management system"

[workspace.dependencies]
# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
thiserror = "1.0"
anyhow = "1.0"

# ユーティリティ
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = { version = "0.11.3", features = ["color"] }
log = "0.4.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# データベース
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
] }

# 暗号化関連
k256 = "0.13"
x25519-dalek = "2.0"

# CLIツール
clap = { version = "4.0", features = ["derive"] }
