[workspace]
resolver = "2"
members = ["agent", "protocol", "controller", "bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["riii111 <>"]
description = "IoT device management system"

[workspace.dependencies]
# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1.0"

# エラーハンドリング
thiserror = "1.0"
anyhow = "1.0"

# ユーティリティ
async-trait = "0.1"
http = "1.2.0"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls-native-roots",
], default-features = false }
url = "2.5.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = { version = "0.11.3", features = ["color"] }
log = "0.4.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.1", features = ["derive"] }
trait-variant = "0.1.2"
data-encoding = "2.6.0"
cuid = "1.3.2"

# データベース
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
] }

# 暗号化関連
k256 = "0.13"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
hex = "0.4.3"
rand_core = "0.6.4"
sha2 = "0.10.8"

# CLIツール
clap = { version = "4.0", features = ["derive"] }
