[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
protocol = { path = "../protocol" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1.85"
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
x25519-dalek = { workspace = true }
tokio-util = "0.7.13"
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
dotenvy = "0.15.7"
home-config = { version = "0.6.0", features = ["json", "toml", "yaml"] }
