[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
zeroize = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
trait-variant = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
rand_core = { workspace = true }
x25519-dalek = { workspace = true }
data-encoding = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
didcomm-rs = { git = "https://github.com/nodecross/didcomm-rs.git", tag = "v0.8.1", default-features = false, features = [
    "raw-crypto",
] }
cuid = {workspace = true}